# open-pets

./: .gitignore  CLAUDE.md  LICENSE  README.en.md  README.md  README.zh-CN.md
app/: README.md  index.html  main.js  package-lock.json  package.json  picker.css  picker.html  picker.js  style.css
app/scripts/: openpets-event
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: main.rs
docs/: pet-evolution-variant-design.md  phrolova-pet-design.md  pink-star-generation-prompt.md  pink-star-pet-design.md  progress.md  rocom-dimo-generation-prompt.md  rocom-dimo-pet-design.md  rocom-maodou-generation-prompt.md  rocom-maodou-pet-design.md
open-pet-creator/: SKILL.md
open-pet-creator/agents/: openai.yaml
open-pet-creator/references/: codex-pet-atlas.md  generation-prompt-format.md
open-pet-creator/scripts/: check_chain.py  inspect_pet_atlas.py  install_pet.py  preview_variants.py  repack_pet_atlas.py  validate_pet_atlas.py
pets/phrolova/: pet.json
pets/pink-star/: pet.json
pets/rocom-dimo/: pet.json
pets/rocom-maodou/: pet.json
tests/: test_chain_validator.py  test_pet_stats_schema.py  test_phrolova_spritesheet.py  test_state_machine.py  test_variant_recipe.py
tools/: fix_phrolova_jitter.py  repack_phrolova_spritesheet.py  repack_pink_star_spritesheet.py
