[package]
name = "openpets"
version = "0.1.0"
description = "OpenPets — Codex-format desktop pet renderer"
authors = ["EASYGOING45"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
rand = "0.8"
# Phase B (stats tracking) needs local-time hour-of-day classification.
# We use libc::localtime_r directly via the platform's existing libc binding
# (already in the dependency tree via tauri's transitive deps) to avoid
# adding the `time` crate, which significantly slowed Tauri macro
# expansion on this project. The wrapper lives in main.rs.

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
